Fixed PlayerCard banner overflow at 372px or less by positioning the guernsey number in bottom left

--- a/src/PlayerCard.sass
+++ b/src/PlayerCard.sass
@@ -1,4 +1,5 @@
 @import colors
+@import media
 
 .PlayerCard
   min-width: 288px
@@ -6,7 +7,6 @@
   min-height: 288px
   margin: 16px
 
-  // TODO: Handle overflow at 372px width
   &-banner
     display: flex
     flex-wrap: wrap
@@ -24,18 +24,26 @@
       background-color: $yellow-adelaide
     &[data-club="North Melbourne"]
       background-color: $blue-north-melbourne
+    @include small-phone
+      position: relative
 
   &-clubBadge
     margin: 10px
 
   &-guernseyNumber
+    min-width: 32px
     font-size: 30px
     font-weight: bold
+    text-align: center
     line-height: 1
     background-color: $white
     margin: 10px
     padding: 6px 10px
     border-radius: 4px
+    @include small-phone
+      position: absolute
+      left: 2%
+      top: 74%
 
   &-description
     background-color: $white
